# vodozemac-wasm

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
android/: build.gradle.kts  build_aar.sh  consumer-rules.pro  gradle.properties  run_validation.sh  settings.gradle.kts
android/Tests/: SmokeValidation.kt
android/src/main/: AndroidManifest.xml
apple/: Package.swift  build_xcframework.sh  run_validation.sh
apple/Tests/: smoke_validation.swift
apple/VodozemacFFI.xcframework/ios-arm64/Headers/: VodozemacFFIFFI.h
apple/VodozemacFFI.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap
crates/vodozemac-ffi/: Cargo.toml  uniffi-bindgen.rs  uniffi.toml
crates/vodozemac-ffi/src/: lib.rs
rn/: README.md  Vodozemac.podspec  package-lock.json  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json
rn/android/: build.gradle
rn/android/src/main/: AndroidManifest.xml
rn/android/src/main/java/com/dtelecom/vodozemac/: vodozemac.kt
rn/android/src/main/java/com/dtelecom/vodozemac/rn/: VodozemacModule.kt  VodozemacPackage.kt
rn/ios/: Vodozemac.mm  Vodozemac.swift  VodozemacFFI.swift
rn/ios/VodozemacFFI.xcframework/: Info.plist
rn/src/: NativeVodozemac.ts  index.ts
scripts/: build-rn.mjs
src/: lib.rs
