[package]
name = "vodozemac-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UniFFI bindings for vodozemac (Olm primitives) — powers the iOS xcframework + Android AAR used by @dtelecom/vodozemac-rn"
repository = "https://github.com/dTelecom/vodozemac-wasm"
publish = false

[lib]
name = "vodozemac_ffi"
# cdylib for the dynamic libraries linked into iOS/Android binaries;
# staticlib so we can also produce a single .a per target slice for
# xcodebuild's -create-xcframework.
crate-type = ["cdylib", "staticlib"]

# Binary that runs UniFFI's language-bindings generator (`uniffi-bindgen
# generate ...`). Invoked from the iOS/Android build scripts.
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
vodozemac = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uniffi = { version = "0.31", features = ["cli"] }
